--- a/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
@@ -87,6 +87,11 @@
     </div>
   {% endunless %}
 </div>
+<style>
+  body {
+    accent-color: black;
+  }
+</style>
 
 {% if isLastRender %}
   <style>
@@ -150,6 +155,7 @@
     }
 
     .variant-box .radio-box input[type=radio]:before {
+      display: none;
       content: "";
       display: block;
       position: absolute;
@@ -163,6 +169,7 @@
     }
 
     .variant-box .radio-box input[type=radio]:after {
+      display: none;
       content: "";
       display: block;
       position: absolute;
