--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -19,7 +19,7 @@
         {% render 'features-list', product: all_products["30-day-blood-sugar-challenge-pp"], isTotal: true, isLP: true %}
         {% endif %}
       </div>
-      <a class="cta-btn" href="#cta-section">{{ ctaTitle }}</a>
+      <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
     </div>
   </div>
 </section>
