--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -101,7 +101,7 @@
     }
 
     .variant-box .radio-box {
-      width: 5%;
+      {% comment %} width: 5%; {% endcomment %}
       align-items: center;
       display: flex;
       padding: 10px;
