--- a/assets/styles-product-aio.scss
+++ b/assets/styles-product-aio.scss
@@ -337,8 +337,8 @@
 
                                 .main-btn {
                                     width: 100%;
-                                    background-color: #d07c5b;
-                                    border-color: #d07c5b;
+                                    background-color: #FFB22D;
+                                    border-color: #FFB22D;
                                     font-size: 24px;
                                     cursor: pointer;
                                     transition: all 0.5s;
@@ -347,8 +347,8 @@
                                     border-radius: 0;
 
                                     &:hover {
-                                        background-color: #AF5B35;
-                                        border-color: #AF5B35;
+                                        background-color: #FFB22D;
+                                        border-color: #FFB22D;
 
                                         &>.save {
                                             color: white;
