--- a/templates/product.all-in-one-revert.liquid
+++ b/templates/product.all-in-one-revert.liquid
@@ -41,7 +41,7 @@
   </div>
 
   {% comment %} {% render 'sale-banner', isHidden: true, isFlash: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "#F59E80", logoFileName: "logo-black-friday.svg", ctaTitle: "flash" %} {% endcomment %}
-  {% render 'product-all-in-one-cta-section', ctaColor: "#FFB22D", isCuralinContent: true, isReviews: true, isBuyQuantity: true, title: "Select Your Deal:", badgesPosition: "bottom", isSaleBadge: true, badgesContent: "free-shipping,money-back,secure-checkout", bottomLineColor: "black", challenge_value: challenge_value, curaeats_value: curaeats_value %}
+  {% render 'product-all-in-one-cta-section', ctaColor: "#FFB22D", isCuralinContent: true, isReviews: true, isBuyQuantity: true, title: "Select Your Deal:", badgesPosition: "bottom",  badgesContent: "free-shipping,money-back,secure-checkout", bottomLineColor: "black", challenge_value: challenge_value, curaeats_value: curaeats_value %}
   {% render 'product-all-in-one-how-to-section' %}
   {% render 'product-all-in-one-reviews-section', reviewsItems: reviewsItems %}
   {% render 'lps-video-reviews', maintitle: 'Customers Reviews Of CuraLin' %}
