--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -180,13 +180,14 @@
       gap: 30px;
     }
 
-    .pack-info-section .instructions .step {
+     {
       display: flex;
       gap: 30px;
     }
 
     .pack-info-section .instructions .step {
       display: flex;
+      flex-wrap: wrap;
       gap: 30px;
     }
 
