--- a/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
@@ -297,6 +297,7 @@
 
     @media screen and (max-width: 768px) {
       .variant-box {
+        height: unset;
         justify-content: unset;
       }
 
