--- a/snippets/trust-badges-widget.liquid
+++ b/snippets/trust-badges-widget.liquid
@@ -58,7 +58,7 @@
     }
 
     #trust-badges-widget .trust-badge {
-      font-size: 3vw;
+      font-size: 2vw;
       flex-direction: column;
       padding-bottom: unset;
     }
@@ -68,4 +68,11 @@
       margin-right: unset;
     }
   }
+
+  @media screen and (max-width: 500px) {
+    #trust-badges-widget .trust-badge {
+      font-size: 3vw;
+    }
+  }
+
 </style>
