--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -95,6 +95,9 @@
 
 
   @media screen and (max-width: 768px) {
+    .product-actions {
+      max-width: unset;
+    }
     #supplement-page section .titles {
       flex-direction: column !important;
       align-items: baseline;
