--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -135,6 +135,7 @@
       font-size: 350px;
       font-weight: bold;
       color: var(--dark-orange);
+      margin: unset;
     }
 
     .pack-info-section.pack-info-section:nth-of-type(even) .product-image-wrapper .number {
@@ -177,11 +178,6 @@
     .pack-info-section .instructions {
       display: flex;
       flex-direction: column;
-      gap: 30px;
-    }
-
-     {
-      display: flex;
       gap: 30px;
     }
 
