--- a/snippets/product-supplement-health-benefits.liquid
+++ b/snippets/product-supplement-health-benefits.liquid
@@ -63,6 +63,12 @@
 
     #supplement-page section p {
       text-align: left;
+      font-size: 3vw;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    #supplement-page section p {
       font-size: 4vw;
     }
   }
