--- a/templates/article.recipe.liquid
+++ b/templates/article.recipe.liquid
@@ -13,7 +13,7 @@
 <div id="recipe-page">
     <div class="top-bar">
       <div class="container">
-        <i class="icofont-arrow-left top-bar-button" onclick="history.back()"></i>
+        <i class="icofont-arrow-left top-bar-button" onclick="window.back()"></i>
 
         <div class="carbs-level">
           <div class="level-icon {{ article.metafields.recipe.carbs_level | downcase }}"><div class="rec"></div><div class="rec"></div><div class="rec"></div></div>
