--- a/templates/article.recipe.liquid
+++ b/templates/article.recipe.liquid
@@ -13,7 +13,7 @@
 <div id="recipe-page">
     <div class="top-bar">
       <div class="container">
-        <i class="icofont-arrow-left top-bar-button" onclick="()=>{history.back()}"></i>
+        <i class="icofont-arrow-left top-bar-button" onclick="goBack()"></i>
 
         <div class="carbs-level">
           <div class="level-icon {{ article.metafields.recipe.carbs_level | downcase }}"><div class="rec"></div><div class="rec"></div><div class="rec"></div></div>
@@ -327,3 +327,11 @@
     }
   </style>
 {% endif %}
+
+<script>
+  function goBack(){
+    document.getElementById('go-back').addEventListener('click', () => {
+      history.back();
+    });
+  }
+</script>
