--- a/templates/article.recipe.liquid
+++ b/templates/article.recipe.liquid
@@ -222,7 +222,7 @@
 
 
     #recipe-page .instructions .text-instructions {
-
+      display: flex;    
       counter-increment: instructions-counter;
       margin-bottom: 20px;
       line-height: 1.8em;
