--- a/snippets/trust-badges-widget.liquid
+++ b/snippets/trust-badges-widget.liquid
@@ -30,6 +30,7 @@
 
   #trust-badges-widget .trust-badge {
     display: flex;
+    flex-direction: {% if isColumn %}column {% endif %};
     text-align: center;
     align-items: center;
     text-transform: uppercase;
