--- a/snippets/product-all-in-one-cta-section-actions-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-thirty-days.liquid
@@ -38,7 +38,7 @@
 {% endif %}
 
   {% if badgesContent %}
-    {% render 'trust-badges-widget', badgesContent: badgesContent, colors: "#5c5c5c", isMiniVersion: true, isColumn: isColumn %}
+    {% render 'trust-badges-widget', badgesContent: badgesContent, colors: "#5c5c5c", isMiniVersion: true, isColumn: true %}
   {% endif %}
 </div>
 
