--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -7,9 +7,9 @@
     <div class="product-info">
       <h1>{% if mainTitle %}{{ mainTitle }}{% elsif product.metafields.my_fields.alternative_title.value %}{{ product.metafields.my_fields.alternative_title.value }}{% else %}{{ product.title }}{% endif %}</h1>
 
-      {% if isCuralinTitle %}
+      {% if isReviews %}
         {% render 'product-all-in-one-cta-section-reviews', isReviewsQuotes: true %}
-      {% elsif isReviews %}
+      {% elsif isCuralinTitle %}
       {% render 'product-all-in-one-cta-section-reviews', isReviewsQuotes: true %}
       {% endif %}
     </div>
