--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -11,7 +11,8 @@
   {% assign title_color = "var(--dark-orange)" %}
 {% endif %}
 {% if product.title contains 'curalin' %}
-{% assign isCuralinTitle = true %}
+{% assign title_color = "var(--dark-orange)" %}
+{% comment %} {% assign isCuralinTitle = true %} {% endcomment %}
 {% endif %}
 
 <div id="supplement-page">
