--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -10,7 +10,7 @@
 {% else %}
   {% assign title_color = "var(--dark-orange)" %}
 {% endif %}
-{% if product.title contains 'curalin' %}
+{% if product.url contains 'curalin-new-product' %}
 {% assign title_color = "var(--dark-orange)" %}
 {% comment %} {% assign isCuralinTitle = true %} {% endcomment %}
 {% endif %}
