--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -11,8 +11,7 @@
   {% assign title_color = "var(--dark-orange)" %}
 {% endif %}
 {% if product.url contains 'curalin-new-product' %}
-{% assign title_color = "var(--dark-orange)" %}
-{% comment %} {% assign isCuralinTitle = true %} {% endcomment %}
+  {% assign isCuralinTitle = true %}
 {% endif %}
 
 <div id="supplement-page">
