--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -6,11 +6,11 @@
 
     <div class="product-info">
       <h1>{% if mainTitle %}{{ mainTitle }}{% elsif product.metafields.my_fields.alternative_title.value %}{{ product.metafields.my_fields.alternative_title.value }}{% else %}{{ product.title }}{% endif %}</h1>
-
+   {% if isCuralinNew %}
+    {% render 'product-all-in-one-cta-section-reviews', isReviewsQuotes: true %}  
+  {% endif %}
       {% if isReviews %}
-        {% render 'product-all-in-one-cta-section-reviews', isReviewsQuotes: true %}
-      {% elsif isCuralinTitle %}
-        {% render 'product-all-in-one-cta-section-reviews', isReviewsQuotes: true %}
+        {% render 'product-all-in-one-cta-section-reviews', isReviewsQuotes: true %}    
       {% endif %}
     </div>
 
