--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -6,10 +6,8 @@
 
     <div class="product-info">
       <h1>{% if mainTitle %}{{ mainTitle }}{% elsif product.metafields.my_fields.alternative_title.value %}{{ product.metafields.my_fields.alternative_title.value }}{% else %}{{ product.title }}{% endif %}</h1>
-   {% if isCuralinNew %}
-    {% render 'product-all-in-one-cta-section-reviews', isReviewsQuotes: true %}  
-  {% endif %}
-      {% if isReviews %}
+  
+      {% if isReviews or isCuralinNew %}
         {% render 'product-all-in-one-cta-section-reviews', isReviewsQuotes: true %}    
       {% endif %}
     </div>
