--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -11,7 +11,7 @@
   {% assign title_color = "var(--dark-orange)" %}
 {% endif %}
 
-{% if product.url contains 'curalin-new-product' %}
+{% if product.url contains '/curalin-new-product' %}
   {% assign isCuralinNew = true %}
 {% endif %}
 
