--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -55,7 +55,7 @@
   .cta-section .product-container .product-info h1 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 40px;
+    font-size: {% if newCuralinTitle %}45px {% else %}40px{% endif %};
     line-height: 40px;
     color: #404733;
     margin-bottom: {% if request.path contains "30-day" %}30px{% endif %};
