--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -5,6 +5,7 @@
       {% render 'product-all-in-one-cta-section-gallery', product: product, isCuralinContent: isCuralinContent, isSaveTitle: isSaveTitle, thambNails: true %}
       {% else %}
       {% render 'product-all-in-one-cta-section-gallery', product: product, isCuralinContent: isCuralinContent, isSaveTitle: isSaveTitle %}
+      {% endif %}
     </div>
 
     <div class="product-info">
