--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -122,7 +122,7 @@
                 </div>
               {% endif %}
 
-              {% if product.variants.size > 1 or thambNails %}
+              {% if product.variants.size > 1 %}
                 {% for var in product.variants %}
                   <div class="swiper-slide">
                     <div class="thumbs-img">
