--- a/snippets/curalin-supplement-benefits.liquid
+++ b/snippets/curalin-supplement-benefits.liquid
@@ -14,17 +14,25 @@
  #curalin-benefits-section .container .curalin-titles h2 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: clamp(32px, 2vw, 40px);
+    font-size: 48px;
     color: #404733;   
  } 
 
  #curalin-benefits-section .container .curalin-titles .curalin-subtitle {
-
+    font-family: 'DM Sans';
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 140%;
  }
 
 
   @media screen and (max-width: 768px) {
-
+    #curalin-benefits-section .container .curalin-titles h2 {
+        font-size: 8vw;
+    }
+    #curalin-benefits-section .container .curalin-titles .curalin-subtitle {
+        font-size: 3vw;
+    }
  
   }
 
