--- a/snippets/onboarding-curalin-call-expert.liquid
+++ b/snippets/onboarding-curalin-call-expert.liquid
@@ -16,7 +16,7 @@
 
           <div class="grey-border"></div>
 
-          <p>With your purchase of {{ product_title }}(capitalize), you can schedule a free 15 minute call with one of our customer success experts to answer all your questions about {{ product_title }}! They will help guide your first 5 days on {{ product_title }} so you can go into it with confidence!</p>
+          <p>With your purchase of {{ product_title }}, you can schedule a free 15 minute call with one of our customer success experts to answer all your questions about {{ product_title }}! They will help guide your first 5 days on {{ product_title }} so you can go into it with confidence!</p>
           <div class="call">
             <a href="https://calendly.com/hellocuralife">
               <button>
