--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -28,7 +28,7 @@
     {% render 'product-supplement-health-benefits' %}
   {% endif %}
   
-
+  {% unless isCuralinNew %}
   {% if product.metafields.custom.bundle-products.value %}
     {% for prod in product.metafields.custom.bundle-products.value %}
       {% if forloop.last %}
@@ -40,6 +40,7 @@
   {% else %}
     {% render 'product-supplement-pack-info', product: product, isLastRender: true %}
   {% endif %}
+{% endunless %}
 
   {% unless product.title contains "Curalin Monthly Deals" %}
     {% render 'product-supplement-info-section', titleColor: title_color %}
