--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -15,7 +15,7 @@
       <p class="subtitle">{{ product.description }}</p>
     </div>
 
-  <div class="product-image-wrapper" style="display: none;">
+  <div class="product-image-wrapper">
       {% if index %}
         <p class="number">{{ index }}</p>
       {% endif %}
@@ -111,6 +111,7 @@
     }
 
     .pack-info-section .product-image-wrapper {
+      display: {% if isNoImage %}none{% endif %};
       position: absolute;
       bottom: -120px;
       right: 0;
