--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -3,7 +3,7 @@
 <section class="pack-info-section instance-{{ index }}">
   <div class="container">
     <div class="titles">
-      <h2 class="title">{{ product.title }}</h2>
+      <h2 class="title">Benefits/Description</h2>
       <p class="subtitle">{{ product.description }}</p>
     </div>
 
